force-app/main/default/objects/Associate__c/Associate__c.object-meta.xml
<CustomObject>
    <label>Associate</label>
    <nameField>
        <label>Associate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Associates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>