force-app/main/default/objects/Associate__c/fields/Primer_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Primer_End_Date__c</fullName>
    <label>Primer End Date</label>
    <type>Date</type>
</CustomField>