force-app/main/default/objects/Associate__c/fields/Primer_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Primer_Start_Date__c</fullName>
    <label>Primer Start Date</label>
    <type>Date</type>
</CustomField>